Initial implementation of ZooKeeper Metastore.  Known Issues: 1. MetastoreScannableTable.remove() doesn't remove intermediate levels yet. 2. CompareVersionAndSet is not yet implemented. 3. All operations are implemented as sync instead of async. 4. Testing needs to be reorganized and enhanced (basic usage tests only).

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
     <module>hedwig-protocol</module>
     <module>bookkeeper-server</module>
     <module>bookkeeper-benchmark</module>
+    <module>bookkeeper-metastore</module>
   </modules>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
